--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"npm run json-server --port 3000 --delay 2000\" \"ng serve\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "json-server": "json-server --watch db.json",
     "test": "ng test"
   },
   "private": true,
@@ -32,6 +33,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^9.0.8",
     "jasmine-core": "~5.1.0",
+    "json-server": "^1.0.0-alpha.23",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
